doc: remove references of chronicleMap and update references to timescale db